--- a/src/app/ui/document-form/document-form.component.html
+++ b/src/app/ui/document-form/document-form.component.html
@@ -1,20 +1,35 @@
 <h2 mat-dialog-title>Реквезиты Входящего Документа</h2>
 <mat-dialog-content>
-  <form [formGroup]="form" class="flex flex-col gap-2">
-    <mat-form-field appearance="fill">
-        <mat-label>Рег №</mat-label>
-        <input matInput type="text" formControlName="regNumber">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-      <mat-label>Дата рег</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="regDate">
-      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>№ исх. док-та </mat-label>
-        <input matInput type="date" formControlName="docNumber">
-    </mat-form-field>
+  <form [formGroup]="form" class="grid grid-cols-1 gap-4">
+  <!-- Рег. № -->
+  <mat-form-field appearance="fill">
+    <mat-label>Рег. №</mat-label>
+    <input matInput formControlName="regNumber" />
+    <mat-error *ngIf="form.get('regNumber')?.hasError('required')">
+      Поле обязательно для заполнения.
+    </mat-error>
+    <mat-error *ngIf="form.get('regNumber')?.hasError('noDigit')">
+      Номер не может состоять только из букв/символов (должна быть цифра).
+    </mat-error>
+  </mat-form-field>
+  <!-- Дата рег. -->
+  <mat-form-field appearance="fill">
+    <mat-label>Дата рег.</mat-label>
+    <input matInput [matDatepicker]="pickerRegDate" formControlName="regDate" />
+    <mat-datepicker-toggle matSuffix [for]="pickerRegDate"></mat-datepicker-toggle>
+    <mat-datepicker #pickerRegDate></mat-datepicker>
+    <mat-error *ngIf="form.get('regDate')?.hasError('required')">
+      Поле обязательно для заполнения.
+    </mat-error>
+  </mat-form-field>
+  <!-- № исх. док-та -->
+  <mat-form-field appearance="fill">
+    <mat-label>№ исх. док-та</mat-label>
+    <input matInput formControlName="docNumber" />
+    <mat-error *ngIf="form.get('docNumber')?.hasError('noDigit')">
+      Номер не может состоять только из букв/символов (должна быть цифра).
+    </mat-error>
+  </mat-form-field>
     <mat-form-field appearance="fill">
         <mat-label>Дата исх. док-та  </mat-label>
         <input matInput type="date" formControlName="docDate">
@@ -35,18 +50,37 @@
           </mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Тема</mat-label>
-        <input matInput type="text" formControlName="subject">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Описание </mat-label>
-        <input matInput type="text" formControlName="description">
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Срок исполнения  </mat-label>
-        <input matInput type="date" formControlName="dueDate"  format="dd/MM/yyyy">
-    </mat-form-field>
+  <!-- Тема -->
+  <mat-form-field appearance="fill">
+    <mat-label>Тема</mat-label>
+    <input matInput formControlName="subject" />
+    <mat-hint align="end">{{ form.get('subject')?.value?.length || 0 }}/100</mat-hint>
+    <mat-error *ngIf="form.get('subject')?.hasError('required')">
+      Поле обязательно для заполнения.
+    </mat-error>
+    <mat-error *ngIf="form.get('subject')?.hasError('maxlength')">
+      Максимальная длина 100 символов.
+    </mat-error>
+  </mat-form-field>
+  <!-- Описание -->
+  <mat-form-field appearance="fill">
+    <mat-label>Описание</mat-label>
+    <textarea matInput formControlName="description" rows="3"></textarea>
+    <mat-hint align="end">{{ form.get('description')?.value?.length || 0 }}/1000</mat-hint>
+    <mat-error *ngIf="form.get('description')?.hasError('maxlength')">
+      Максимальная длина 1000 символов.
+    </mat-error>
+  </mat-form-field>
+  <!-- Срок исполнения -->
+  <div *ngIf="form.errors?.['dueDateBeforeRegDate']" class="error-message">
+    Срок исполнения не может быть раньше даты регистрации!
+  </div>
+  <mat-form-field appearance="fill">
+    <mat-label>Срок исполнения</mat-label>
+    <input matInput [matDatepicker]="pickerDueDate" formControlName="dueDate" />
+    <mat-datepicker-toggle matSuffix [for]="pickerDueDate"></mat-datepicker-toggle>
+    <mat-datepicker #pickerDueDate></mat-datepicker>
+  </mat-form-field>
     <mat-slide-toggle formControlName="isAccessible">
         Доступ 
     </mat-slide-toggle>
@@ -63,6 +97,7 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
+  <button mat-button *ngIf="isSaved" (click)="onPrint()">Печать</button>
   <button mat-button [mat-dialog-close]="true">Закрыть</button>
   <button type="submit" mat-raised-button color="primary" (click)="onSave()">Сохранить</button>
 </mat-dialog-actions>
