--- a/src/app/ui/document-list/document-list.component.html
+++ b/src/app/ui/document-list/document-list.component.html
@@ -6,10 +6,6 @@
       Добавить
     </button>
   
-    <!-- Print button -->
-    <button mat-raised-button color="accent" (click)="printRegistry()">
-      Печать
-    </button>
   </div>
 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width:100%;">
 
@@ -66,12 +62,12 @@
     </ng-container>
 
 
-  <!-- If you want an actions column for Edit/Delete -->
+  <!-- Печатать -->
 
   <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <th mat-header-cell *matHeaderCellDef>Действия</th>
     <td mat-cell *matCellDef="let doc">
-      <button mat-button color="primary" (click)="editDocument(doc)">Edit</button>
+      <button mat-button color="primary" (click)="openPrintDialog(doc)">Печать</button>
       <button mat-button color="warn" (click)="deleteDocument(doc.id)">Delete</button>
     </td>
   </ng-container>
